Add jupyter black

--- a/mondaydotcom-notebooks/Mondaydotcom Set Task Integration Status.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Set Task Integration Status.ipynb
@@ -75,17 +75,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4efc6653",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert environment, \"No environment variable found;401\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6e0b4d10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#check the environment vars for secrets\n",
+    "# check the environment vars for secrets\n",
     "\n",
     "env_file = f\".env-{environment}\"\n",
     "logger.info(\"Loading the .env file from %s\", env_file)\n",
     "dotenv.load_dotenv(dotenv.find_dotenv(env_file))\n",
     "\n",
-    "assert os.environ.get(\"MONDAY_KEY\"), f\"MONDAY_KEY not found in {env_file}\""
+    "assert os.environ.get(\"MONDAY_KEY\"), f\"MONDAY_KEY not found in {env_file};500\""
    ]
   },
   {
