Small fixes for the monthly tasks run

--- a/mondaydotcom-notebooks/Mondaydotcom Create Monthly Task Reports.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Create Monthly Task Reports.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "# change these or set as papermill parameters to report on year and month\n",
     "year_for_report = 2022\n",
-    "month_for_report = 4"
+    "month_for_report = 5"
    ]
   },
   {
@@ -230,16 +230,13 @@
     "        \"Project Tasks\",\n",
     "        \"Subitems\",\n",
     "        \"Project Contacts\",\n",
-    "        \"SET Resource\",\n",
     "        \"Timeline\",\n",
     "        \"Customer Source\",\n",
     "        \"Dependency\",\n",
     "        \"Date Added\",\n",
     "        \"Timeline Days\",\n",
     "        \"Item ID\",\n",
-    "        \"Project Health\",\n",
     "        \"Notes\",\n",
-    "        \"Agreements\",\n",
     "        \"Project Health__text\",\n",
     "        \"Project Health__changed_at\",\n",
     "        \"Date Added__default_formatter\",\n",
@@ -252,7 +249,6 @@
     "        \"Timeline__changed_at\",\n",
     "    ],\n",
     "    inplace=True,\n",
-    "    errors=\"ignore\",\n",
     ")\n",
     "\n",
     "projects_df = projects_df.explode([\"account_id\"], ignore_index=True)\n",
@@ -387,8 +383,16 @@
     "                new_rec[\"Task Completed\"] = parser.parse(record[\"Status__changed_at\"])\n",
     "\n",
     "            new_rec[\"integration_state_rule\"] = \"hours_split_between_owners\"\n",
-    "            owner_records.append(new_rec)\n",
-    "\n",
+    "            owner_records.append(new_rec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d0ca9a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "owner_records_df = pd.DataFrame(owner_records)\n",
     "owner_records_df.drop(\n",
     "    columns=[\n",
@@ -656,20 +660,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81a5ec79",
+   "id": "9444c34b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_tasks(df, client, project, resource, month_end_date):\n",
-    "    \"\"\"Get the journal tasks based on the details we'll send to smartsheet.\"\"\"\n",
-    "    return df[\n",
-    "        (\n",
-    "            (df[\"Client Name\"] == client)\n",
-    "            & (df[\"Project Title\"] == project)\n",
-    "            & (df[\"Resource\"] == resource)\n",
-    "            & (df[\"Month Ending Date\"] == month_end_date)\n",
-    "        )\n",
-    "    ]"
+    "# only need billable\n",
+    "report_df = report_df.loc[report_df['No Bill']==False].reset_index(drop = True)\n",
+    "report_df"
    ]
   },
   {
@@ -726,31 +723,28 @@
     "rows = []\n",
     "for k, v in report_df.to_dict(\"index\").items():\n",
     "\n",
-    "    # only post billable projects\n",
-    "    if not v[\"No Bill\"]:\n",
+    "    row = ss_client.models.row.Row()\n",
     "\n",
-    "        row = ss_client.models.row.Row()\n",
+    "    row.cells.append(\n",
+    "        {\"column_id\": cell_ids[\"Account/Client\"], \"value\": v[\"Client Name\"]}\n",
+    "    )\n",
+    "    if v.get(\"Grant Number\"):\n",
+    "        row.cells.append(\n",
+    "            {\"column_id\": cell_ids[\"Grant Proposal #\"], \"value\": v[\"Grant Number\"]}\n",
+    "        )\n",
+    "    row.cells.append(\n",
+    "        {\"column_id\": cell_ids[\"Project Title\"], \"value\": v[\"Project Title\"]}\n",
+    "    )\n",
+    "    row.cells.append(\n",
+    "        {\"column_id\": cell_ids[\"Month-end Date\"], \"value\": v[\"Month Ending Date\"]}\n",
+    "    )\n",
+    "    row.cells.append(\n",
+    "        {\"column_id\": cell_ids[\"Completed Hours\"], \"value\": v[\"Hours\"]}\n",
+    "    )\n",
+    "    row.cells.append({\"column_id\": cell_ids[\"Resource\"], \"value\": v[\"Resource\"]})\n",
     "\n",
-    "        row.cells.append(\n",
-    "            {\"column_id\": cell_ids[\"Account/Client\"], \"value\": v[\"Client Name\"]}\n",
-    "        )\n",
-    "        if v.get(\"Grant Number\"):\n",
-    "            row.cells.append(\n",
-    "                {\"column_id\": cell_ids[\"Grant Proposal #\"], \"value\": v[\"Grant Number\"]}\n",
-    "            )\n",
-    "        row.cells.append(\n",
-    "            {\"column_id\": cell_ids[\"Project Title\"], \"value\": v[\"Project Title\"]}\n",
-    "        )\n",
-    "        row.cells.append(\n",
-    "            {\"column_id\": cell_ids[\"Month-end Date\"], \"value\": v[\"Month Ending Date\"]}\n",
-    "        )\n",
-    "        row.cells.append(\n",
-    "            {\"column_id\": cell_ids[\"Completed Hours\"], \"value\": v[\"Hours\"]}\n",
-    "        )\n",
-    "        row.cells.append({\"column_id\": cell_ids[\"Resource\"], \"value\": v[\"Resource\"]})\n",
-    "\n",
-    "        row.to_bottom = True\n",
-    "        rows.append(row)"
+    "    row.to_bottom = True\n",
+    "    rows.append(row)"
    ]
   },
   {
@@ -780,13 +774,32 @@
     "    my_list = []\n",
     "    for row in result.to_dict()[\"data\"]:\n",
     "        my_list.append(row[\"id\"])\n",
-    "\n",
+    "        \n",
     "    row_series = pd.Series(my_list, name=\"row_id\", dtype=np.int64)\n",
     "    row_series\n",
     "\n",
     "    report_df = pd.concat([report_df, row_series], axis=1)\n",
     "\n",
     "report_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "960d0377",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_tasks(df, client, project, resource, month_end_date):\n",
+    "    \"\"\"Get the journal tasks based on the details we'll send to smartsheet.\"\"\"\n",
+    "    return df[\n",
+    "        (\n",
+    "            (df[\"Client Name\"] == client)\n",
+    "            & (df[\"Project Title\"] == project)\n",
+    "            & (df[\"Resource\"] == resource)\n",
+    "            & (df[\"Month Ending Date\"] == month_end_date)\n",
+    "        )\n",
+    "    ]"
    ]
   },
   {
@@ -799,7 +812,8 @@
     "# create a dictionary to make attaching the files easier\n",
     "new_dict = {}\n",
     "\n",
-    "if report_df.get(\"row_id\"):\n",
+    "# ensure all of the row_ids are filled in\n",
+    "if report_df['row_id'].all():\n",
     "\n",
     "    for k, v in report_df.to_dict(\"index\").items():\n",
     "        row_id = v[\"row_id\"]\n",
@@ -811,9 +825,7 @@
     "            v[\"Project Title\"],\n",
     "            v[\"Resource\"],\n",
     "            v[\"Month Ending Date\"],\n",
-    "        )\n",
-    "\n",
-    "new_dict"
+    "        )"
    ]
   },
   {
