--- a/mondaydotcom-notebooks/Mondaydotcom Create Periodic Project Updates.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Create Periodic Project Updates.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2429b9e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "id": "af1b67e9",
+   "cell_type": "markdown",
+   "id": "6b4e66f4",
    "metadata": {},
    "source": [
     "# Create Periodic Project Updates in Smartsheet\n",
@@ -346,9 +338,10 @@
     "\n",
     "tasks_df[\"Total Duration Hours\"] = tasks_df[\"Actual Time__duration\"] / 60 / 60\n",
     "\n",
+    "# Hours is equal to Actual + Duration + Faisal's tool hours\n",
     "tasks_df[\"Hours\"] = tasks_df[\"Actual Hours\"].fillna(0) + tasks_df[\n",
     "    \"Total Duration Hours\"\n",
-    "].fillna(0)\n",
+    "].fillna(0)  + tasks_df[\"FA Hours\"].fillna(0)\n",
     "\n",
     "tasks_df.drop(\n",
     "    columns=[\n",
@@ -385,6 +378,7 @@
     "        \"Actual Time__duration\",\n",
     "        \"Date Added__default_formatter\",\n",
     "        \"Status__changed_at\",\n",
+    "        \"FA Hours\",\n",
     "    ],\n",
     "    inplace=True,\n",
     "    errors=\"ignore\",\n",
