Pull custom FA hours column from hours calc

--- a/mondaydotcom-notebooks/Mondaydotcom Create Periodic Project Updates.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Create Periodic Project Updates.ipynb
@@ -341,7 +341,7 @@
     "# Hours is equal to Actual + Duration + Faisal's tool hours\n",
     "tasks_df[\"Hours\"] = tasks_df[\"Actual Hours\"].fillna(0) + tasks_df[\n",
     "    \"Total Duration Hours\"\n",
-    "].fillna(0)  + tasks_df[\"FA Hours\"].fillna(0)\n",
+    "].fillna(0)\n",
     "\n",
     "tasks_df.drop(\n",
     "    columns=[\n",
@@ -378,7 +378,6 @@
     "        \"Actual Time__duration\",\n",
     "        \"Date Added__default_formatter\",\n",
     "        \"Status__changed_at\",\n",
-    "        \"FA Hours\",\n",
     "    ],\n",
     "    inplace=True,\n",
     "    errors=\"ignore\",\n",
