Update dependencies and add IDs to smartsheet

--- a/mondaydotcom-notebooks/Mondaydotcom Create Monthly Task Reports.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Create Monthly Task Reports.ipynb
@@ -237,8 +237,6 @@
     "        \"Timeline Days\",\n",
     "        \"Item ID\",\n",
     "        \"Notes\",\n",
-    "        \"Project Health__text\",\n",
-    "        \"Project Health__changed_at\",\n",
     "        \"Date Added__default_formatter\",\n",
     "        \"Item ID__default_formatter\",\n",
     "        \"Tasks Status__mirror\",\n",
@@ -263,9 +261,7 @@
    "outputs": [],
    "source": [
     "# add the account to the projects\n",
-    "projects_df = pd.merge(projects_df, accounts_df, how=\"left\", on=\"account_id\").drop(\n",
-    "    columns=[\"account_id\"]\n",
-    ")\n",
+    "projects_df = pd.merge(projects_df, accounts_df, how=\"left\", on=\"account_id\")\n",
     "projects_df"
    ]
   },
@@ -621,7 +617,6 @@
     "\n",
     "df.drop(\n",
     "    columns=[\n",
-    "        \"project_id\",\n",
     "        \"monday_id\",\n",
     "        \"task_end_year\",\n",
     "        \"task_end_month\",\n",
@@ -650,6 +645,8 @@
     "            \"Month Ending Date\": \"first\",\n",
     "            \"Grant Number\": \"first\",\n",
     "            \"No Bill\": \"first\",\n",
+    "            \"account_id\": \"first\",\n",
+    "            \"project_id\": \"first\",\n",
     "        }\n",
     "    )\n",
     "    .reset_index()\n",
@@ -742,7 +739,9 @@
     "        {\"column_id\": cell_ids[\"Completed Hours\"], \"value\": v[\"Hours\"]}\n",
     "    )\n",
     "    row.cells.append({\"column_id\": cell_ids[\"Resource\"], \"value\": v[\"Resource\"]})\n",
-    "\n",
+    "    row.cells.append({\"column_id\": cell_ids[\"MDC Account ID\"], \"value\": v[\"account_id\"]})\n",
+    "    row.cells.append({\"column_id\": cell_ids[\"MDC Project ID\"], \"value\": v[\"project_id\"]})\n",
+    "    \n",
     "    row.to_bottom = True\n",
     "    rows.append(row)"
    ]
