--- a/mondaydotcom-notebooks/Mondaydotcom Create Periodic Project Updates.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Create Periodic Project Updates.ipynb
@@ -305,7 +305,7 @@
     "# add the account to the projects\n",
     "projects_df = pd.merge(\n",
     "    projects_df, accounts_df, how=\"left\", left_on=\"account_id\", right_on=\"account_id\"\n",
-    ").drop(columns=[\"account_id\"])\n",
+    ")\n",
     "projects_df"
    ]
   },
@@ -450,6 +450,7 @@
     "            \"Notes\": \"first\",\n",
     "            \"Project Lifecycle\": \"first\",\n",
     "            \"project_id\": \"first\",\n",
+    "            \"account_id\": \"first\",\n",
     "        }\n",
     "    )\n",
     "    .reset_index()\n",
@@ -479,6 +480,7 @@
     "            \"Notes\": \"first\",\n",
     "            \"Project Lifecycle\": \"first\",\n",
     "            \"project_id\": \"first\",\n",
+    "            \"account_id\": \"first\",\n",
     "        }\n",
     "    )\n",
     "    .reset_index()\n",
@@ -506,10 +508,10 @@
     "            \"Estimated Hours\": \"sum\",\n",
     "            \"Task Hours\": \"sum\",\n",
     "            \"project_id\": \"first\",\n",
+    "            \"account_id\": \"first\",\n",
     "            \"Grant Number\": \"first\",\n",
     "            \"Notes\": \"first\",\n",
     "            \"Project Lifecycle\": \"first\",\n",
-    "            # \"Task Status\": lambda x: \";\".join(list(x)),\n",
     "        }\n",
     "    )\n",
     "    .reset_index()\n",
@@ -591,6 +593,12 @@
     "                \"value\": v[\"Project Lifecycle\"],\n",
     "            }\n",
     "        )\n",
+    "    row.cells.append(\n",
+    "        {\"column_id\": cell_ids[\"MDC Project ID\"], \"value\": v[\"project_id\"]}\n",
+    "    )\n",
+    "    row.cells.append(\n",
+    "        {\"column_id\": cell_ids[\"MDC Account ID\"], \"value\": v[\"account_id\"]}\n",
+    "    )\n",
     "\n",
     "    row.to_bottom = True\n",
     "    rows.append(row)"
@@ -709,6 +717,12 @@
     "        {\"column_id\": posted_cell_ids[\"Completed Hours\"], \"value\": v[\"Task Hours\"]}\n",
     "    )\n",
     "    row.cells.append({\"column_id\": posted_cell_ids[\"Estimated Only\"], \"Value\": True})\n",
+    "    row.cells.append(\n",
+    "        {\"column_id\": posted_cell_ids[\"MDC Project ID\"], \"value\": v[\"project_id\"]}\n",
+    "    )\n",
+    "    row.cells.append(\n",
+    "        {\"column_id\": posted_cell_ids[\"MDC Account ID\"], \"value\": v[\"account_id\"]}\n",
+    "    )\n",
     "\n",
     "    row.to_bottom = True\n",
     "    rows.append(row)\n",
