Updated task reports to json; update prefect v2

--- a/mondaydotcom-notebooks/Mondaydotcom Create Periodic Project Updates.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Create Periodic Project Updates.ipynb
@@ -13,6 +13,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "73716da2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%load_ext nb_black"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e2baec28",
    "metadata": {},
    "outputs": [],
@@ -26,7 +36,6 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import prefect\n",
     "from box import Box\n",
     "\n",
     "import smartsheet\n",
@@ -42,9 +51,6 @@
     "\n",
     "import scrapbook as sb\n",
     "import dotenv\n",
-    "\n",
-    "from prefect import Flow, Parameter, task, unmapped\n",
-    "from prefect.executors import LocalDaskExecutor, LocalExecutor\n",
     "\n",
     "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(logging.INFO)"
