--- a/mondaydotcom-notebooks/Mondaydotcom Set Task Integration Status.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Set Task Integration Status.ipynb
@@ -5,7 +5,21 @@
    "id": "19f92b40",
    "metadata": {},
    "source": [
-    "# Validate Monday.com tasks for integration issues"
+    "# Validate Monday.com tasks for integration issues\n",
+    "\n",
+    "Runs through MDC tasks and checks for simple validation issues, then updates the MDC issues with a status message.\n",
+    "\n",
+    "Useful for later processing and posting effort hours."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f136799d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%load_ext nb_black"
    ]
   },
   {
@@ -20,10 +34,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "import prefect\n",
-    "from prefect import task, Flow, Parameter, unmapped\n",
-    "from prefect.executors import LocalExecutor, LocalDaskExecutor\n",
-    "from prefect.utilities.logging import get_logger\n",
+    "from prefect import task, flow\n",
     "\n",
     "from datetime import timedelta, datetime\n",
     "from box import Box\n",
@@ -133,6 +144,47 @@
     "    inplace=True,\n",
     ")\n",
     "\n",
+    "# add columns back if used in the validation\n",
+    "columns_to_drop = [\n",
+    "    \"Subtasks\",\n",
+    "    \"Status__text\",\n",
+    "    \"Status__changed_at\",\n",
+    "    \"Integration Message\",\n",
+    "    \"Timeline__to\",\n",
+    "    \"Timeline__from\",\n",
+    "    \"Timeline__visualization_type\",\n",
+    "    \"Timeline Days\",\n",
+    "    \"Timeline Hours (Estimated)__formula\",\n",
+    "    \"Actual Time\",\n",
+    "    \"Total Actual Hours__formula\",\n",
+    "    \"Notes\",\n",
+    "    \"Dependencies\",\n",
+    "    \"Customer Repos\",\n",
+    "    \"Pull Request URL\",\n",
+    "    \"Issue URL\",\n",
+    "    \"Date Added\",\n",
+    "    \"Date Added__default_formatter\",\n",
+    "    \"Date Completed\",\n",
+    "    \"Extended Hours\",\n",
+    "    \"Project Status__mirror\",\n",
+    "    \"Project Closed Date__mirror\",\n",
+    "    \"Reported Month-end Date\",\n",
+    "    \"Actual Time__running\",\n",
+    "    \"Actual Time__duration\",\n",
+    "    \"Actual Time__startDate\",\n",
+    "    \"Timeline__changed_at\",\n",
+    "    \"Timeline\",\n",
+    "    \"Status\",\n",
+    "    \"Actual Time__changed_at\",\n",
+    "]\n",
+    "\n",
+    "# # remove columns to make it all easier to _see_\n",
+    "tasks_df.drop(\n",
+    "    columns_to_drop,\n",
+    "    axis=1,\n",
+    "    inplace=True,\n",
+    ")\n",
+    "\n",
     "tasks_df = tasks_df.explode([\"project_id\"], ignore_index=True)\n",
     "tasks_df.head()"
    ]
@@ -186,25 +238,25 @@
     "    )\n",
     "\n",
     "    # project is required\n",
-    "    if np.isnan(project_id) or project_id == \"\" or not project_id:\n",
+    "    if pd.isna(project_id) or project_id == \"\" or not project_id:\n",
     "        record[\"integration_state\"] = \"STOP\"\n",
     "        record[\"integration_state_rule\"] = \"project_is_required\"\n",
     "        logger.warning(\"%s: %s\", record[\"integration_state_rule\"], title)\n",
     "\n",
     "    # rule 1\n",
-    "    elif not np.isnan(actual_hours) and len_sessions_list > 0:\n",
+    "    elif not pd.isna(actual_hours) and len_sessions_list > 0:\n",
     "        record[\"integration_state\"] = \"STOP\"\n",
     "        record[\"integration_state_rule\"] = \"actual_hours_and_sessions\"\n",
     "        logger.warning(\"%s: %s\", record[\"integration_state_rule\"], title)\n",
     "\n",
     "    # rule 2 - using actual hours requires at least one owner\n",
-    "    elif not np.isnan(actual_hours) and len_owners_list == 0:\n",
+    "    elif not pd.isna(actual_hours) and len_owners_list == 0:\n",
     "        record[\"integration_state\"] = \"STOP\"\n",
     "        record[\"integration_state_rule\"] = \"actual_hours_and_no_owners\"\n",
     "        logger.warning(\"%s: %s\", record[\"integration_state_rule\"], title)\n",
     "\n",
     "    # rule 3\n",
-    "    elif np.isnan(actual_hours) and len_sessions_list == 0:\n",
+    "    elif pd.isna(actual_hours) and len_sessions_list == 0:\n",
     "        record[\"integration_state\"] = \"STOP\"\n",
     "        record[\"integration_state_rule\"] = \"no_actual_hours_and_no_sessions\"\n",
     "        logger.warning(\"%s: %s\", record[\"integration_state_rule\"], title)\n",
@@ -235,6 +287,19 @@
     "        vald_recs.append(vald_rec)\n",
     "\n",
     "df = pd.DataFrame(vald_recs).set_index(\"index\")\n",
+    "# clean up the dataframe since Prefect is real specific about JSON pickling\n",
+    "# and nan messes that up hard.\n",
+    "df.drop(\n",
+    "    [\n",
+    "        \"Actual Hours\",\n",
+    "        \"Actual Time__additional_value\",\n",
+    "        \"integration_state\",\n",
+    "        \"project_id\",\n",
+    "        \"Owner\",\n",
+    "    ],\n",
+    "    axis=1,\n",
+    "    inplace=True,\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -249,14 +314,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "09483b02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@task(name=\"print task info\")\n",
+    "def print_task_info(monday_conn, record):\n",
+    "    print(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f61c401f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@task(max_retries=3, retry_delay=timedelta(seconds=15))\n",
-    "def update_task_integration_status(monday_conn, record):\n",
-    "    logger = prefect.context.get(\"logger\")\n",
+    "@task(retries=3, retry_delay_seconds=15)\n",
+    "def update_task_integration_status(monday_conn, record: pd.core.series.Series):\n",
+    "    \"\"\"\n",
+    "    Updates MDC integration state info.\n",
+    "\n",
+    "    Params:\n",
+    "    - monday_conn is the MDC client connection\n",
+    "    - record is an individual row from a dataframe\n",
+    "    \"\"\"\n",
     "    logger.debug(f\"Updating Monday.com record for {record['Task Name']}\")\n",
+    "\n",
     "    monday_conn.items.change_item_value(\n",
     "        TASKS_BOARD_ID,\n",
     "        record[\"task_id\"],\n",
@@ -272,13 +356,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with Flow(\"update monday.com tasks\") as flow:\n",
+    "@flow(name=\"update monday.com tasks\")\n",
+    "def main_flow(monday_conn, validated_tasks):\n",
     "\n",
-    "    monday_conn = Parameter(\"monday_conn\")\n",
-    "    validated_tasks = Parameter(\"validated_tasks\")\n",
-    "\n",
-    "    # send updates back to Monday.com... this is all one-way so no reduce required\n",
-    "    update_task_integration_status.map(unmapped(monday_conn), validated_tasks)"
+    "    for index, row in validated_tasks.iterrows():\n",
+    "        # send updates back to Monday.com\n",
+    "        update_task_integration_status(monday_conn, row)"
    ]
   },
   {
@@ -288,8 +371,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {\"monday_conn\": conn, \"validated_tasks\": vald_recs}\n",
-    "state = flow.run(parameters=params, executor=LocalDaskExecutor())"
+    "state = main_flow(conn, df)\n",
+    "state.message"
    ]
   },
   {
@@ -302,6 +385,14 @@
     "# save off an output\n",
     "sb.glue(\"updated_task_count\", len(df))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe82c94a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
