Add resource ID for later reporting

--- a/mondaydotcom-notebooks/Mondaydotcom Create Monthly Task Reports.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Create Monthly Task Reports.ipynb
@@ -266,7 +266,7 @@
    "outputs": [],
    "source": [
     "users_df = pd.DataFrame(users).set_index(\"id\")\n",
-    "users_df.head()"
+    "users_df"
    ]
   },
   {
@@ -875,6 +875,9 @@
     "    )\n",
     "    row.cells.append(\n",
     "        {\"column_id\": cell_ids[\"MDC Project ID\"], \"value\": v[\"MDC Project ID\"]}\n",
+    "    )\n",
+    "    row.cells.append(\n",
+    "        {\"column_id\": cell_ids[\"MDC Resource ID\"], \"value\": v[\"MDC Resource ID\"]}\n",
     "    )\n",
     "\n",
     "    row.cells.append({\"column_id\": cell_ids[\"Posted Date\"], \"value\": prepared_date})\n",
