Update integration status rule; rename report to export

--- a/mondaydotcom-notebooks/Mondaydotcom Create Monthly Task Exports.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Create Monthly Task Exports.ipynb
@@ -5,7 +5,7 @@
    "id": "a7fe9993",
    "metadata": {},
    "source": [
-    "# Create Monthly Task Reports in Smartsheet\n"
+    "# Create Monthly Task Exports in Smartsheet\n"
    ]
   },
   {
@@ -106,13 +106,10 @@
     "\n",
     "# change these or set as papermill parameters to report on year and month\n",
     "year_for_report = 2022\n",
-    "month_for_report = 6\n",
+    "month_for_report = 7\n",
     "\n",
     "# it is possible to run this without posting to smartsheet... useful for testing\n",
-    "post_records = True\n",
-    "\n",
-    "# filter for \"ready\" tasks\n",
-    "filter_tasks_by = \"Ready\"  # or also \"Posted\""
+    "post_records = True"
    ]
   },
   {
@@ -373,18 +370,10 @@
     "tasks_df = get_items_by_board(conn, TASKS_BOARD_ID, \"status\", \"Done\")\n",
     "\n",
     "# Only include Ready tasks\n",
-    "if filter_tasks_by == \"Ready\":\n",
-    "    logger.info(\"Selecting Ready tasks\")\n",
-    "    tasks_df = tasks_df.loc[\n",
-    "        tasks_df[\"Integration Message\"].str.startswith(\"Ready\", na=False)\n",
-    "    ]\n",
-    "elif filter_tasks_by == \"Posted\":\n",
-    "    logger.info(\"Selecting Posted tasks\")\n",
-    "    tasks_df = tasks_df.loc[\n",
-    "        tasks_df[\"Integration Message\"].str.startswith(\"Posted\", na=False)\n",
-    "    ]\n",
-    "else:\n",
-    "    pass\n",
+    "logger.info(\"Selecting Ready tasks\")\n",
+    "tasks_df = tasks_df.loc[\n",
+    "    tasks_df[\"Integration Message\"].str.startswith(\"Ready\", na=False)\n",
+    "]\n",
     "\n",
     "tasks_df.rename(\n",
     "    columns={\n",
@@ -429,7 +418,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0c90fd55",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Get just this period's tasks\n",
@@ -669,8 +660,8 @@
    "outputs": [],
    "source": [
     "# only need billable\n",
-    "report_df = report_df.loc[report_df[\"No Bill\"] == False].reset_index(drop=True)\n",
-    "report_df"
+    "# report_df = report_df.loc[report_df[\"No Bill\"] == False].reset_index(drop=True)\n",
+    "# report_df"
    ]
   },
   {
@@ -932,13 +923,13 @@
    "outputs": [],
    "source": [
     "# attach the json we created way above in the _cache folder\n",
+    "if post_records:\n",
+    "    for index, row in report_df.iterrows():\n",
+    "        filename = f\"{row['MDC Project ID']}_{row['MDC Resource ID']}_{row['Month Ending Date']}.json\"\n",
+    "        logger.info(f\"Writing file {filename} to smartsheet...\")\n",
     "\n",
-    "for index, row in report_df.iterrows():\n",
-    "    filename = f\"{row['MDC Project ID']}_{row['MDC Resource ID']}_{row['Month Ending Date']}.json\"\n",
-    "    logger.info(f\"Writing file {filename} to smartsheet...\")\n",
-    "\n",
-    "    with open(os.path.join(\"_cache\", filename), \"r\") as f:\n",
-    "        ss_client.Attachments.attach_file_to_row(time_sheet_id, row[\"row_id\"], f)"
+    "        with open(os.path.join(\"_cache\", filename), \"r\") as f:\n",
+    "            ss_client.Attachments.attach_file_to_row(time_sheet_id, row[\"row_id\"], f)"
    ]
   },
   {
@@ -950,22 +941,12 @@
    "source": [
     "if post_records:\n",
     "    for index, row in df.iterrows():\n",
-    "        if row[\"No Bill\"]:\n",
-    "            result = conn.items.change_item_value(\n",
-    "                TASKS_BOARD_ID,\n",
-    "                str(row[\"MDC Task ID\"]).split('-')[0],\n",
-    "                \"text01\",\n",
-    "                f\"Posted - No Bill - {datetime.now()}\",\n",
-    "            )\n",
-    "        else:\n",
-    "            result = conn.items.change_item_value(\n",
-    "                TASKS_BOARD_ID, \n",
-    "                str(row[\"MDC Task ID\"]).split('-')[0], \n",
-    "                \"text01\", \n",
-    "                f\"Posted - {datetime.now()}\",\n",
-    "            )\n",
-    "            billable_posted = True\n",
-    "\n",
+    "        result = conn.items.change_item_value(\n",
+    "            TASKS_BOARD_ID, \n",
+    "            str(row[\"MDC Task ID\"]).split('-')[0], \n",
+    "            \"text01\", \n",
+    "            f\"Posted - {datetime.now()}\",\n",
+    "        )\n",
     "else:\n",
     "    logger.warning(\"Not posting\")"
    ]
@@ -1025,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
