--- a/mondaydotcom-notebooks/Mondaydotcom Set Task Integration Status.ipynb
+++ b/mondaydotcom-notebooks/Mondaydotcom Set Task Integration Status.ipynb
@@ -66,7 +66,8 @@
    "outputs": [],
    "source": [
     "# fixed vars\n",
-    "TASKS_BOARD_ID = \"1883170887\""
+    "TASKS_BOARD_ID = \"1883170887\"\n",
+    "PROJECTS_BOARD_ID = \"1882404316\""
    ]
   },
   {
@@ -117,6 +118,54 @@
    "outputs": [],
    "source": [
     "conn = MondayClient(os.environ.get(\"MONDAY_KEY\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98351741",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get projects to check for lifecycle => don't task to closed projects\n",
+    "projects_df = get_items_by_board(conn, PROJECTS_BOARD_ID).fillna(\"\")\n",
+    "\n",
+    "projects_df.rename(\n",
+    "    columns={\n",
+    "        \"monday_id\": \"project_id\",\n",
+    "        \"monday_name\": \"Project Name\",\n",
+    "        \"Project Lifecycle__text\": \"Project Lifecycle\",\n",
+    "    },\n",
+    "    inplace=True,\n",
+    ")\n",
+    "\n",
+    "columns_to_drop = [\n",
+    "    \"Project Lifecycle__changed_at\",\n",
+    "    \"Subitems\",\n",
+    "    \"Project Contacts\",\n",
+    "    \"Repo Description__mirror\",\n",
+    "    \"Timeline\",\n",
+    "    \"Timeline Days\",\n",
+    "    \"Dependency\",\n",
+    "    \"Date Added__default_formatter\",\n",
+    "    \"Project Tasks\",\n",
+    "    \"Tasks Status__mirror\",\n",
+    "    \"Timeline__to\",\n",
+    "    \"Timeline__from\",\n",
+    "    \"Timeline__changed_at\",\n",
+    "    \"Customer Source\",\n",
+    "    \"Grant Number\",\n",
+    "    \"Notes\",\n",
+    "    \"Date Added\",\n",
+    "    \"Account\",\n",
+    "]\n",
+    "projects_df.drop(\n",
+    "    columns_to_drop,\n",
+    "    axis=1,\n",
+    "    inplace=True,\n",
+    ")\n",
+    "\n",
+    "projects_df"
    ]
   },
   {
@@ -192,6 +241,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "43da4dd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge in the project info for later rules\n",
+    "tasks_df = tasks_df.merge(projects_df, how=\"left\", on=\"project_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "59e3490e",
    "metadata": {},
    "outputs": [],
@@ -229,6 +289,7 @@
     "    len_owners_list = len(owners_list)\n",
     "    title = record[\"Task Name\"]\n",
     "    project_id = record[\"project_id\"]\n",
+    "    project_lifecycle = record[\"Project Lifecycle\"]\n",
     "\n",
     "    logger.debug(\n",
     "        \"actual_hours:%s, len(session_list):%s, len(owners_list):%s\",\n",
@@ -259,6 +320,11 @@
     "    elif pd.isna(actual_hours) and len_sessions_list == 0:\n",
     "        record[\"integration_state\"] = \"STOP\"\n",
     "        record[\"integration_state_rule\"] = \"no_actual_hours_and_no_sessions\"\n",
+    "        logger.warning(\"%s: %s\", record[\"integration_state_rule\"], title)\n",
+    "\n",
+    "    elif project_lifecycle == \"Closed\":\n",
+    "        record[\"integration_state\"] = \"STOP\"\n",
+    "        record[\"integration_state_rule\"] = \"project_is_closed\"\n",
     "        logger.warning(\"%s: %s\", record[\"integration_state_rule\"], title)\n",
     "\n",
     "    else:\n",
@@ -372,7 +438,7 @@
    "outputs": [],
    "source": [
     "state = main_flow(conn, df)\n",
-    "state.message"
+    "state"
    ]
   },
   {
@@ -412,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
